sandc/test/fixtures/astRegression/shouldSucceed/literals/Characters.sand
pub class Characters {
    static x = 'a';
    static y = 65char;

    static space = ' ';

    static backslash = '\\';
    static newline = '\n';
    static tab = '\t';
    static singleQuote = '\'';
    static doubleQuote = '"';
}