sandc/test/fixtures/astRegression/shouldFail/productions/anonymousInnerClassInstantiationExpression/StaticProperty.sand
pub class StaticProperty {
    foo() {
        new Foo {
            static x = y;
        }
    }
}